@@ -1,4 +1,4 @@
 
 Please read the README in the doc/ subdirectory. Paragraph 2 tells
-you how to configure, compile and install Cistron Radius.
+you how to configure, compile and install freeradius.
 
