@@ -1,10 +1,10 @@
 
-	Cistron-Radius and the Simultaneous-Use parameter.
+	FreeRadius and the Simultaneous-Use parameter.
 
 
 0. INTRODUCTION
 
-  Lots of people want to limt the number of times one user account can
+  Lots of people want to limit the number of times one user account can
   login, usually to one. Thi is hard to do with the radius protocol;
   the nature of the accounting stuff is such that the idea the radius server
   has about the list of logged-in users might be different from the idea
